Sat Feb 24 21:34:58 1996  Theodore Y. Ts'o  <tytso@dcl>

	* vhangup.c (ptyint_vhangup): Don't do call vhangup() if system
		doesn't have it.

Sat Jan 27 01:13:34 1996  Mark Eichin  <eichin@cygnus.com>

	* void_assoc.c (ptyint_void_association): if we don't have
	TIOCNOTTY (HP/UX 9 for example) don't try to use it.

Fri Jan 26 00:26:37 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* cleanup.c (pty_cleanup): Update utmp only if update_utmp is true.

Tue Jan 16 13:52:22 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* void_assoc.c (ptyint_void_association): Move setsid call from
        open_ctty to void_association.

	* logwtmp.c (pty_logwtmp): Pass user argument to update_wtmp.

	* update_utmp.c (update_utmp): Implement PTY_UTMP_USERNAME_VALID flag

Mon Jan 15 15:48:37 1996  Sam Hartman  (hartmans@justforfun)

	* cleanup.c: Change to indiciate utmp user name is valid.

	* 

Mon Jan 15 15:21:16 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* update_utmp.c (pty_update_utmp): Add flags field; use ttyslot
        only if reasonable.

Fri Jan 12 16:33:37 1996  Sam Hartman  <hartmans@infocalypse>

	* open_slave.c (pty_open_slave): Don't use fchmod or fchown; they
 	don't buy much security unless /dev is world-writable and may
 	prevent Solaris lossage.

Thu Dec 21 00:12:58 1995  Sam Hartman  <hartmans@portnoy>

	* open_slave.c (pty_open_slave): Open with no delay.


Wed Jan 10 22:20:04 1996  Theodore Y. Ts'o  <tytso@dcl>

	* open_slave.c (pty_open_slave): Added hack by Doug Engert to get
		util/pty to work under Solaris.  We should double check to
		make sure this is a correct fix.


Sun Nov 12 12:44:33 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* open_ctty.c (pty_open_ctty): Remove redundant Ultrix calls to setpgrp()

Sun Oct 22 03:48:37 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* update_wtmp.c (ptyint_update_wtmp): Add comments explaining why ifdefs are right.

Sun Oct 22 01:20:52 1995  Sam Hartman  <hartmans@infocalypse>
